--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <h3 style="text-decoration: underline;
-          text-decoration-color:#106eea"><span>Portfolio</span></h3>
+          text-decoration-color:#106eea"><span>Gallery</span></h3>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
